--- a/index.html
+++ b/index.html
@@ -220,10 +220,13 @@
     </div>
 
     <main class="content-grid">
-        <div class="main-feature">
-            </div>
-        <div class="side-feature">
-            </div>
+        <div id="prediction-output" class="main-feature">
+            <p>Loading Oracle Prediction...</p>
+        </div>
+        
+        <div id="accuracy-stat" class="side-feature">
+            <p>Loading Model Accuracy...</p>
+        </div>
     </main>
 <script src="script.js"></script>
 </body>
