--- a/index.html
+++ b/index.html
@@ -220,12 +220,20 @@
     </div>
 
     <main class="content-grid">
-        <div id="prediction-output" class="main-feature">
-            <p>Loading Oracle Prediction...</p>
+        <div class="main-feature">
+            <h2 style="margin-bottom: 20px; border-bottom: 2px solid #c00; padding-bottom: 10px;">Western Conference Predictions</h2>
+            <div id="west-predictions">
+                <p>Loading Western Conference...</p>
+            </div>
         </div>
         
-        <div id="accuracy-stat" class="side-feature">
-            <p>Loading Model Accuracy...</p>
+        <div class="side-feature">
+            <h2 style="margin-bottom: 20px; border-bottom: 2px solid #0066cc; padding-bottom: 10px;">Eastern Conference</h2>
+            <div id="east-predictions">
+                <p>Loading Eastern Conference...</p>
+            </div>
+            <div id="model-stats" style="margin-top: 30px; padding-top: 20px; border-top: 1px solid #444;">
+                </div>
         </div>
     </main>
 <script src="script.js"></script>
