--- a/index.html
+++ b/index.html
@@ -225,6 +225,8 @@
             <div id="west-predictions">
                 <p>Loading Western Conference...</p>
             </div>
+            <div id="model-stats" style="margin-top: 30px; padding-top: 20px; border-top: 1px solid #444;">
+                </div>
         </div>
         
         <div class="side-feature">
