--- a/index.html
+++ b/index.html
@@ -3,239 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NBA Dashboard Mockup</title>
+    <title>NBA Dashboard</title>
     <style>
-        /* General Reset */
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: Arial, sans-serif;
-        }
+        /* --- GENERAL RESET --- */
+        * { margin: 0; padding: 0; box-sizing: border-box; font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif; }
+        body { background-color: #f4f4f4; color: #333; overflow-x: hidden; }
 
-        body {
-            background-color: #f4f4f4;
-            overflow-x: hidden;
-        }
+        /* --- NAVIGATION --- */
+        .navbar { background-color: #000; height: 45px; display: flex; align-items: center; justify-content: space-between; padding: 0 40px; font-size: 13px; font-weight: 700; position: sticky; top: 0; z-index: 1000; }
+        .nav-left, .nav-right { display: flex; align-items: center; gap: 20px; }
+        .logo { color: white; font-size: 24px; font-weight: 900; font-style: italic; letter-spacing: -1px; margin-right: 15px; }
+        .nav-links { list-style: none; display: flex; gap: 15px; }
+        .nav-links li { color: #fff; cursor: pointer; text-transform: capitalize; }
+        .nav-links li:hover { color: #ccc; }
+        .league-pass-btn { background-color: #FFC107; color: black; padding: 5px 12px; border-radius: 4px; font-weight: 800; cursor: pointer; }
+        .nav-right span { color: white; cursor: pointer; font-weight: bold; }
 
-        /* Navigation */
-        .navbar {
-            background-color: #000;
-            color: white;
-            padding: 15px 50px;
-        }
+        /* --- TICKER --- */
+        .scoreboard-container { background: #fff; border-bottom: 1px solid #ddd; display: flex; align-items: center; height: 80px; overflow-x: auto; white-space: nowrap; }
+        .date-box { background: #f9f9f9; min-width: 90px; height: 100%; display: flex; flex-direction: column; justify-content: center; align-items: center; border-right: 1px solid #eee; color: #000; }
+        .game-card { background: white; min-width: 260px; height: 100%; padding: 10px 20px; display: flex; justify-content: space-between; align-items: center; border-right: 1px solid #eee; }
+        .team { display: flex; align-items: center; gap: 10px; font-weight: bold; font-size: 13px; }
+        .icon { width: 22px; height: 22px; border-radius: 50%; display: flex; justify-content: center; align-items: center; color: white; font-size: 10px; font-weight: bold; }
+        .preview-btn { background-color: #C9082A; color: white; border: none; border-radius: 3px; padding: 4px 8px; font-size: 10px; font-weight: bold; cursor: pointer; margin-top: 5px; text-transform: uppercase; }
+        .preview-btn.yellow-btn { background-color: #FFC107; color: black; }
+        .red { background: #C9082A; } .black { background: #000; } .blue { background: #006BB6; } .yellow { background: #FFC107; color: black; }
 
-        .nav-content {
+        /* --- MAIN LAYOUT --- */
+        .content-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 20px; padding: 30px 40px; max-width: 1600px; margin: 0 auto; }
+        .main-feature, .side-feature { background-color: #000; border-radius: 4px; padding: 20px; min-height: 500px; color: white; }
+        
+        /* Colored Underline Headers */
+        .main-feature h2 { border-bottom: 2px solid #C9082A; padding-bottom: 10px; margin-bottom: 15px; font-size: 18px; }
+        .side-feature h2 { border-bottom: 2px solid #006BB6; padding-bottom: 10px; margin-bottom: 15px; font-size: 18px; }
+
+        /* --- DYNAMIC PREDICTION ITEMS --- */
+        .prediction-item {
+            background-color: #121212;
+            border: 1px solid #333;
+            border-radius: 4px;
+            padding: 12px 15px;
+            margin-bottom: 8px;
             display: flex;
-            align-items: center;
-            gap: 40px;
-        }
-
-        .logo {
-            font-weight: bold;
-            font-size: 24px;
-        }
-
-        .nav-links {
-            list-style: none;
-            display: flex;
-            gap: 20px;
-        }
-
-        .nav-links li {
-            cursor: pointer;
-            font-size: 14px;
-            text-transform: uppercase;
-        }
-
-        /* Scoreboard Ticker */
-        .scoreboard-container {
-            display: flex;
-            background: #ebebeb;
-            padding: 10px 40px;
-            gap: 15px;
-            overflow-x: auto;
-            white-space: nowrap;
-        }
-
-        .date-box {
-            background: white;
-            padding: 15px;
-            text-align: center;
-            border-radius: 8px;
-            min-width: 80px;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-        }
-
-        .game-card {
-            background: white;
-            border-radius: 8px;
-            padding: 15px;
-            display: flex;
-            min-width: 280px;
             justify-content: space-between;
             align-items: center;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.05);
         }
 
-        .teams {
-            display: flex;
-            flex-direction: column;
-            gap: 8px;
-        }
+        /* The colored left borders to match your design */
+        .west-border { border-left: 4px solid #C9082A; }
+        .east-border { border-left: 4px solid #006BB6; }
 
-        .team {
-            display: flex;
-            align-items: center;
-            gap: 10px;
-            font-weight: bold;
-        }
+        .pred-info h4 { color: white; font-size: 14px; margin-bottom: 4px; }
+        .pred-info p { color: #888; font-size: 11px; margin: 0; }
+        .yes-tag { color: #00FF00; font-weight: bold; font-size: 13px; }
 
-        .icon {
-            width: 20px;
-            height: 20px;
-            display: inline-block;
-            border-radius: 50%;
-            text-align: center;
-            line-height: 20px; /* Center text vertically */
-            font-size: 10px;
-            color: white;
-        }
-
-        .game-info {
-            text-align: right;
-            font-size: 12px;
-            color: #555;
-        }
-
-        .preview-btn {
-            margin-top: 5px;
-            background: #800;
-            color: white;
-            border: none;
-            padding: 5px 10px;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 10px;
-            font-weight: bold;
-            transition: opacity 0.2s;
-        }
-
-        .preview-btn:hover {
-            opacity: 0.9;
-        }
-
-        /* Main Content Grid */
-        .content-grid {
-            display: grid;
-            grid-template-columns: 2fr 1fr;
-            gap: 20px;
-            padding: 30px 50px;
-            min-height: 500px;
-        }
-
-        .main-feature, .side-feature {
-            background-color: #000;
-            border-radius: 4px;
-            min-height: 400px;
-            color: white;
-            padding: 20px;
-        }
-
-        /* Helper colors */
-        .red { background: #c00; }
-        .black { background: #222; }
-        .blue { background: #0066cc; }
-        .yellow { background: #ccaa00; }
-        .yellow-btn { background: #7a6a00; }
-
-        /* Responsive tweak */
-        @media (max-width: 768px) {
-            .content-grid {
-                grid-template-columns: 1fr;
-            }
-            .navbar {
-                padding: 15px 20px;
-            }
-        }
+        @media (max-width: 1024px) { .content-grid { grid-template-columns: 1fr; } .nav-links { display: none; } }
     </style>
 </head>
 <body>
 
     <nav class="navbar">
-        <div class="nav-content">
+        <div class="nav-left">
             <div class="logo">NBA</div>
             <ul class="nav-links">
-                <li>Games</li>
-                <li>Schedule</li>
-                <li>Stats</li>
-                <li>Prediction</li>
-                <li>Teams</li>
+                <li>Games</li> <li>Schedule</li> <li>Watch</li> <li>News</li> <li>All-Star</li> <li>Stats</li> <li>Standings</li> <li>Teams</li> <li>Fantasy</li>
             </ul>
+        </div>
+        <div class="nav-right">
+            <div class="league-pass-btn">League Pass</div>
+            <span>Store</span> <span>Tickets</span> <span>Sign In</span>
         </div>
     </nav>
 
     <div class="scoreboard-container">
         <div class="date-box">
-            <span>FRI</span>
-            <strong>FEB 20</strong>
-            <div class="eye-icon">👁</div>
+            <span style="font-size: 11px; font-weight: bold; color: #555;">FRI</span>
+            <strong style="font-size: 16px;">FEB 20</strong>
         </div>
-
         <div class="game-card">
-            <div class="teams">
-                <div class="team"><span class="icon red">C</span> Cavaliers</div>
-                <div class="team"><span class="icon black">B</span> Nets</div>
-            </div>
-            <div class="game-info">
-                <p>Fri, Feb 20<br>8:00 AM</p>
-                <button class="preview-btn">GAME PREVIEW</button>
-            </div>
+            <div class="teams"><div class="team"><span class="icon red">C</span> Cavaliers</div><div class="team"><span class="icon black">B</span> Nets</div></div>
+            <div class="game-info"><p>Fri, Feb 20<br>8:00 AM</p><button class="preview-btn">GAME PREVIEW</button></div>
         </div>
-
         <div class="game-card">
-            <div class="teams">
-                <div class="team"><span class="icon blue">W</span> Wizards</div>
-                <div class="team"><span class="icon yellow">P</span> Pacers</div>
-            </div>
-            <div class="game-info">
-                <p>Fri, Feb 20<br>8:00 AM</p>
-                <button class="preview-btn yellow-btn">GAME PREVIEW</button>
-            </div>
+            <div class="teams"><div class="team"><span class="icon blue">W</span> Wizards</div><div class="team"><span class="icon yellow">P</span> Pacers</div></div>
+            <div class="game-info"><p>Fri, Feb 20<br>8:00 AM</p><button class="preview-btn yellow-btn">GAME PREVIEW</button></div>
         </div>
-
         <div class="game-card">
-            <div class="teams">
-                <div class="team"><span class="icon blue">76</span> 76ers</div>
-                <div class="team"><span class="icon red">H</span> Hawks</div>
-            </div>
-            <div class="game-info">
-                <p>Fri, Feb 20<br>8:00 AM</p>
-                <button class="preview-btn">GAME PREVIEW</button>
-            </div>
+            <div class="teams"><div class="team"><span class="icon blue">76</span> 76ers</div><div class="team"><span class="icon red">H</span> Hawks</div></div>
+            <div class="game-info"><p>Fri, Feb 20<br>8:00 AM</p><button class="preview-btn">GAME PREVIEW</button></div>
+        </div>
+        <div class="game-card">
+            <div class="teams"><div class="team"><span class="icon black">S</span> Spurs</div><div class="team"><span class="icon red">H</span> Heat</div></div>
+            <div class="game-info"><p>Fri, Feb 20<br>9:30 AM</p><button class="preview-btn">GAME PREVIEW</button></div>
         </div>
     </div>
 
     <main class="content-grid">
         <div class="main-feature">
-            <h2 style="margin-bottom: 20px; border-bottom: 2px solid #c00; padding-bottom: 10px;">Western Conference Predictions</h2>
+            <h2>Western Conference Predictions</h2>
             <div id="west-predictions">
-                <p>Loading Western Conference...</p>
+                <p style="color:#666;">Loading data...</p>
             </div>
         </div>
         
         <div class="side-feature">
-            <h2 style="margin-bottom: 20px; border-bottom: 2px solid #0066cc; padding-bottom: 10px;">Eastern Conference</h2>
+            <h2>Eastern Conference</h2>
             <div id="east-predictions">
-                <p>Loading Eastern Conference...</p>
+                <p style="color:#666;">Loading data...</p>
+            </div>
+            <div style="margin-top: 30px; border-top: 1px solid #333; padding-top: 15px; font-size: 12px; color: #888;">
+                Model Accuracy: <strong style="color: white;">100%</strong><br>Target: MadePlayoffs
             </div>
         </div>
-        <div id="model-stats" style="margin-top: 30px; padding-top: 20px; border-top: 1px solid #444;">
-                </div>
     </main>
-<script src="script.js"></script>
+
+    <script src="script.js"></script>
 </body>
 </html>
