--- a/index.html
+++ b/index.html
@@ -59,119 +59,115 @@
             color: var(--text-main);
         }
 
-        /* --- NEW GAME TICKER DESIGN --- */
+        /* --- NEW GAME TICKER DESIGN (Updated to match image) --- */
         .game-ticker {
-            background-color: #f3f3f3; /* Light grey background like screenshot */
-            padding: 10px 0 10px 10px;
+            background-color: #e0e0e0; /* Light grey background */
+            padding: 10px;
             display: flex;
-            gap: 10px;
+            gap: 15px;
             overflow-x: auto;
-            align-items: stretch;
+            align-items: center;
             border-bottom: 1px solid #ccc;
-            /* Hide scrollbar for cleaner look */
-            scrollbar-width: none; 
         }
-        .game-ticker::-webkit-scrollbar { display: none; }
 
-        /* Date Block (Left Side) */
-        .date-block {
-            background-color: #e8e8e8;
-            min-width: 70px;
+        /* Date Block (FRI FEB 20) */
+        .date-box {
+            background: linear-gradient(to bottom, #f0f0f0, #d9d9d9);
+            border: 1px solid #bbb;
+            border-radius: 5px;
+            min-width: 80px;
+            height: 70px;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            color: #333;
             font-weight: 700;
-            color: #000;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            flex-shrink: 0;
-            padding: 10px 0;
+            text-align: center;
+            line-height: 1.2;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
         }
-        .date-day { font-size: 13px; }
-        .date-month { font-size: 11px; color: #555; }
-        .date-icon { margin-top: 8px; font-size: 16px; color: #666; }
+        .date-day { font-size: 14px; display: block; }
+        .date-month { font-size: 12px; display: block; }
+        .date-icon { font-size: 16px; margin-top: 4px; color: #555; }
 
-        /* Game Card */
-        .game-card {
-            background: white;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            min-width: 200px;
+        /* Matchup Card */
+        .match-card {
+            background-color: #f9f9f9;
+            border: 1px solid #ccc;
+            border-radius: 6px;
+            padding: 10px 15px;
             display: flex;
-            flex-direction: column;
-            flex-shrink: 0;
+            justify-content: space-between;
+            align-items: center;
+            min-width: 280px;
             box-shadow: 0 1px 3px rgba(0,0,0,0.1);
         }
 
-        .game-header {
-            padding: 6px 10px;
-            font-size: 11px;
-            font-weight: 800;
-            color: #000;
-            border-bottom: 1px solid #f0f0f0;
-        }
-
-        .game-body {
-            padding: 8px 10px;
-            flex-grow: 1;
+        /* Left Side: Teams */
+        .match-teams {
             display: flex;
             flex-direction: column;
-            gap: 6px;
-        }
-
-        .matchup-row {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .team-flex {
-            display: flex;
-            align-items: center;
             gap: 8px;
         }
 
-        .ticker-logo {
-            width: 22px;
-            height: 22px;
-            object-fit: contain;
-        }
-
-        .ticker-name {
-            font-size: 13px;
-            font-weight: 600;
-            color: #000;
-        }
-
-        .ticker-record {
-            font-size: 11px;
-            color: #666;
-        }
-
-        .game-footer {
-            border-top: 1px solid #f0f0f0;
-            padding: 6px;
-            text-align: center;
-            font-size: 10px;
-            font-weight: 700;
-            color: #000;
+        .team-row {
             display: flex;
             align-items: center;
-            justify-content: center;
-            gap: 5px;
+            gap: 10px;
+        }
+
+        .ticker-logo {
+            width: 24px;
+            height: 24px;
+            border-radius: 50%; /* Circle logo background */
+        }
+        
+        /* Specific logo background colors to match image style */
+        .bg-cavs { background-color: #860038; padding: 2px; }
+        .bg-nets { background-color: black; padding: 2px; }
+        .bg-wizards { background-color: #002B5C; padding: 2px; }
+        .bg-pacers { background-color: #FDBB30; padding: 2px; }
+        .bg-76ers { background-color: #006BB6; padding: 2px; }
+        .bg-hawks { background-color: #C8102E; padding: 2px; }
+
+        .ticker-name {
+            font-size: 14px;
+            font-weight: 700;
+            color: #000;
+        }
+
+        /* Right Side: Info & Button */
+        .match-info {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+            justify-content: space-between;
+            height: 100%;
+            gap: 8px;
+        }
+
+        .match-time {
+            text-align: right;
+            font-size: 11px;
+            color: #666;
+            line-height: 1.3;
+        }
+
+        .btn-preview {
+            color: white;
+            font-size: 11px;
+            font-weight: 700;
+            padding: 4px 12px;
+            border-radius: 4px;
+            text-decoration: none;
+            text-transform: uppercase;
+            border: none;
             cursor: pointer;
         }
-        .game-footer:hover { background-color: #f9f9f9; }
 
-        /* Yellow Play Icon */
-        .icon-play {
-            width: 0; 
-            height: 0; 
-            border-top: 4px solid transparent;
-            border-bottom: 4px solid transparent;
-            border-left: 6px solid #fdb927; /* NBA Yellow */
-        }
+        .btn-red { background-color: #860038; } /* Cavs Red */
+        .btn-gold { background-color: #7b6602; } /* Pacers/Wiz Gold-ish dark */
 
 
         /* --- Main Content Area --- */
@@ -342,124 +338,66 @@
 
     <div class="game-ticker">
         
-        <div class="date-block">
-            <span class="date-day">THU</span>
-            <span class="date-month">FEB 19</span>
-            <span class="date-icon">👁️</span>
+        <div class="date-box">
+            <span class="date-day">FRI</span>
+            <span class="date-month">FEB 20</span>
+            <div class="date-icon">👁️</div>
         </div>
 
-        <div class="game-card">
-            <div class="game-header">8:00 AM PHT</div>
-            <div class="game-body">
-                <div class="matchup-row">
-                    <div class="team-flex">
-                        <img src="https://cdn.nba.com/logos/nba/1610612745/primary/L/logo.svg" class="ticker-logo">
-                        <span class="ticker-name">Rockets</span>
-                    </div>
-                    <span class="ticker-record">33-20</span>
+        <div class="match-card">
+            <div class="match-teams">
+                <div class="team-row">
+                    <img src="https://cdn.nba.com/logos/nba/1610612739/primary/L/logo.svg" class="ticker-logo bg-cavs">
+                    <span class="ticker-name">Cavaliers</span>
                 </div>
-                <div class="matchup-row">
-                    <div class="team-flex">
-                        <img src="https://cdn.nba.com/logos/nba/1610612766/primary/L/logo.svg" class="ticker-logo">
-                        <span class="ticker-name">Hornets</span>
-                    </div>
-                    <span class="ticker-record">26-29</span>
+                <div class="team-row">
+                    <img src="https://cdn.nba.com/logos/nba/1610612751/primary/L/logo.svg" class="ticker-logo bg-nets">
+                    <span class="ticker-name">Nets</span>
                 </div>
             </div>
-            <div class="game-footer">
-                <div class="icon-play"></div> League Pass
+            <div class="match-info">
+                <div class="match-time">
+                    Fri, Feb 20<br>8:00 AM
+                </div>
+                <button class="btn-preview btn-red">GAME PREVIEW</button>
             </div>
         </div>
 
-        <div class="game-card">
-            <div class="game-header">8:00 AM PHT</div>
-            <div class="game-body">
-                <div class="matchup-row">
-                    <div class="team-flex">
-                        <img src="https://cdn.nba.com/logos/nba/1610612751/primary/L/logo.svg" class="ticker-logo">
-                        <span class="ticker-name">Nets</span>
-                    </div>
-                    <span class="ticker-record">15-38</span>
+        <div class="match-card">
+            <div class="match-teams">
+                <div class="team-row">
+                    <img src="https://cdn.nba.com/logos/nba/1610612764/primary/L/logo.svg" class="ticker-logo bg-wizards">
+                    <span class="ticker-name">Wizards</span>
                 </div>
-                <div class="matchup-row">
-                    <div class="team-flex">
-                        <img src="https://cdn.nba.com/logos/nba/1610612739/primary/L/logo.svg" class="ticker-logo">
-                        <span class="ticker-name">Cavaliers</span>
-                    </div>
-                    <span class="ticker-record">34-21</span>
+                <div class="team-row">
+                    <img src="https://cdn.nba.com/logos/nba/1610612754/primary/L/logo.svg" class="ticker-logo bg-pacers">
+                    <span class="ticker-name">Pacers</span>
                 </div>
             </div>
-            <div class="game-footer">
-                <div class="icon-play"></div> League Pass
+            <div class="match-info">
+                <div class="match-time">
+                    Fri, Feb 20<br>8:00 AM
+                </div>
+                <button class="btn-preview btn-gold">GAME PREVIEW</button>
             </div>
         </div>
 
-        <div class="game-card">
-            <div class="game-header">8:00 AM PHT</div>
-            <div class="game-body">
-                <div class="matchup-row">
-                    <div class="team-flex">
-                        <img src="https://cdn.nba.com/logos/nba/1610612737/primary/L/logo.svg" class="ticker-logo">
-                        <span class="ticker-name">Hawks</span>
-                    </div>
-                    <span class="ticker-record">26-30</span>
+        <div class="match-card">
+            <div class="match-teams">
+                <div class="team-row">
+                    <img src="https://cdn.nba.com/logos/nba/1610612755/primary/L/logo.svg" class="ticker-logo bg-76ers">
+                    <span class="ticker-name">76ers</span>
                 </div>
-                <div class="matchup-row">
-                    <div class="team-flex">
-                        <img src="https://cdn.nba.com/logos/nba/1610612755/primary/L/logo.svg" class="ticker-logo">
-                        <span class="ticker-name">76ers</span>
-                    </div>
-                    <span class="ticker-record">30-24</span>
+                <div class="team-row">
+                    <img src="https://cdn.nba.com/logos/nba/1610612737/primary/L/logo.svg" class="ticker-logo bg-hawks">
+                    <span class="ticker-name">Hawks</span>
                 </div>
             </div>
-            <div class="game-footer">
-                <div class="icon-play"></div> League Pass
-            </div>
-        </div>
-
-         <div class="game-card">
-            <div class="game-header">8:00 AM PHT</div>
-            <div class="game-body">
-                <div class="matchup-row">
-                    <div class="team-flex">
-                        <img src="https://cdn.nba.com/logos/nba/1610612754/primary/L/logo.svg" class="ticker-logo">
-                        <span class="ticker-name">Pacers</span>
-                    </div>
-                    <span class="ticker-record">15-40</span>
+            <div class="match-info">
+                <div class="match-time">
+                    Fri, Feb 20<br>8:00 AM
                 </div>
-                <div class="matchup-row">
-                    <div class="team-flex">
-                        <img src="https://cdn.nba.com/logos/nba/1610612764/primary/L/logo.svg" class="ticker-logo">
-                        <span class="ticker-name">Wizards</span>
-                    </div>
-                    <span class="ticker-record">14-39</span>
-                </div>
-            </div>
-            <div class="game-footer">
-                <div class="icon-play"></div> League Pass
-            </div>
-        </div>
-
-         <div class="game-card">
-            <div class="game-header">8:30 AM PHT</div>
-            <div class="game-body">
-                <div class="matchup-row">
-                    <div class="team-flex">
-                        <img src="https://cdn.nba.com/logos/nba/1610612765/primary/L/logo.svg" class="ticker-logo">
-                        <span class="ticker-name">Pistons</span>
-                    </div>
-                    <span class="ticker-record">40-13</span>
-                </div>
-                <div class="matchup-row">
-                    <div class="team-flex">
-                        <img src="https://cdn.nba.com/logos/nba/1610612752/primary/L/logo.svg" class="ticker-logo">
-                        <span class="ticker-name">Knicks</span>
-                    </div>
-                    <span class="ticker-record">35-20</span>
-                </div>
-            </div>
-            <div class="game-footer">
-                <div class="icon-play"></div> League Pass
+                <button class="btn-preview btn-red">GAME PREVIEW</button>
             </div>
         </div>
 
