--- a/index.html
+++ b/index.html
@@ -181,7 +181,8 @@
         .hero-bg {
             position: absolute;
             top: 0; right: 0; bottom: 0; left: 0;
-            background-image: url('https://cdn.nba.com/manage/2024/02/nikola-jokic-iso-blue-jersey.jpg');
+            /* Updated Image URL as requested */
+            background-image: url('https://assets-cms.thescore.com/uploads/image/file/624257/w640xh480_GettyImages-2147043906.jpg?ts=1712811995');
             background-size: cover;
             background-position: center 20%;
             opacity: 0.8;
@@ -368,17 +369,17 @@
             border: 1px solid #333;
         }
         
-        /* HEADER ALIGNMENT FIX */
+        /* HEADER ALIGNMENT */
         .card-header-conf {
             display: flex;
-            align-items: center; /* Vertical Center */
-            height: 50px;       /* Fixed Height ensures alignment */
+            align-items: center; 
+            height: 50px;       
             padding: 0 15px;
             font-size: 18px;
             font-weight: 700;
             text-transform: uppercase;
             border-bottom: 1px solid #333;
-            white-space: nowrap; /* Prevent wrapping so height stays fixed */
+            white-space: nowrap; 
             overflow: hidden;
             text-overflow: ellipsis;
         }
