--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             color: #000;
             font-weight: 700;
             text-align: center;
-            flex-shrink: 0; /* Prevent shrinking */
+            flex-shrink: 0; 
         }
         .date-day { font-size: 14px; }
         .date-month { font-size: 12px; margin-bottom: 5px; }
@@ -102,7 +102,7 @@
             flex-direction: column;
             overflow: hidden;
             box-shadow: 0 1px 2px rgba(0,0,0,0.1);
-            flex-shrink: 0; /* Prevent shrinking */
+            flex-shrink: 0; 
         }
 
         .card-header-time {
@@ -625,22 +625,22 @@
                         <div class="stories-grid">
                             <div class="story-card">
                                 <span class="badge">NEW</span>
-                                <img src="https://cdn.nba.com/manage/2024/02/jalen-brunson-driving.jpg" class="story-bg" alt="Story">
+                                <img src="https://assets.aboutamazon.com/7b/87/a561b9a34342b49f820220f2d2c5/nba-amazon-prime.png" class="story-bg" alt="Story">
                                 <div class="story-overlay">The NBA is Back On Prime 📺</div>
                             </div>
                             <div class="story-card">
                                 <span class="badge">FYI</span>
-                                <img src="https://cdn.nba.com/manage/2024/02/keegan-murray-dunk.jpg" class="story-bg" alt="Story">
+                                <img src="https://cdn.nba.com/manage/2026/02/stephon-castle-ajay-mitchell.jpg" class="story-bg" alt="Story">
                                 <div class="story-overlay">'Sophomore' Ladder: Ranking 2nd Year Standouts</div>
                             </div>
                             <div class="story-card">
                                 <span class="badge">HEADLINES</span>
-                                <img src="https://cdn.nba.com/manage/2023/10/ousmane-dieng-shooting.jpg" class="story-bg" alt="Story">
+                                <img src="https://img-s-msn-com.akamaized.net/tenant/amp/entityid/AA1Wjbk3.img?w=912&h=513&m=4&q=66" class="story-bg" alt="Story">
                                 <div class="story-overlay">The Athletic: Ousmane Dieng Has Been A Bucks 'Jewel'</div>
                             </div>
                             <div class="story-card">
                                 <span class="badge">HEADLINES</span>
-                                <img src="https://cdn.nba.com/manage/2023/10/landry-shamet-shooting.jpg" class="story-bg" alt="Story">
+                                <img src="https://cdn.nba.com/manage/2026/02/GettyImages-2260614942-784x441.jpg" class="story-bg" alt="Story">
                                 <div class="story-overlay">The Athletic: Shamet Might Be The Best Vet-Minimum...</div>
                             </div>
                         </div>
