added games tab

--- a/index.html
+++ b/index.html
@@ -370,7 +370,6 @@
             border: 1px solid #333;
         }
         
-        /* HEADER ALIGNMENT */
         .card-header-conf {
             display: flex;
             align-items: center; 
@@ -403,12 +402,11 @@
 <body>
 
     <nav class="navbar">
-        <a href="#" class="navbar-brand" onclick="showHome()">
+        <a href="index.html" class="navbar-brand" onclick="showHome()">
             <img src="https://cdn.nba.com/logos/leagues/logo-nba.svg" alt="NBA Logo">
         </a>
         <div class="nav-links">
-            <a class="nav-link">GAMES</a>
-            <a class="nav-link">STATS</a> 
+            <a href="games.html" class="nav-link">GAMES</a> <a class="nav-link">STATS</a> 
             <a class="nav-link" onclick="showPredictions()">PREDICTION</a>
             <a class="nav-link">TEAMS</a>
         </div>
