--- a/index.html
+++ b/index.html
@@ -1151,14 +1151,17 @@
                     eastContainer.innerHTML = eastHTML;
                 }
                 
+                        // FIXED: Changed target_variable to target to match your JSON
                 if (data.model_metadata) {
-                    document.getElementById('model-stats').innerHTML = `Accuracy: ${(data.model_metadata.accuracy * 100)}% | Target: ${data.model_metadata.target_variable}`;
+                    document.getElementById('model-stats').innerHTML = 
+                        `Accuracy: ${(data.model_metadata.accuracy * 100)}%`;
                 }
 
             } catch (error) {
                 console.error(error);
             }
         }
+
 
         function showHome() {
             document.getElementById('home-content').style.display = 'block';
